tests/negative/no-start.hs
-- EXPECT-ERROR: No definition for start
import ReWire

notStart :: Bool -> Bool
notStart x = x

main = undefined
